fix import page footer

--- a/import_page.html
+++ b/import_page.html
@@ -23,7 +23,7 @@
 
 <body>
     <div id="page-container">
-        <div id="page-wrap">
+        <div id="content-wrap">
             <nav class="navbar navbar-light navbar-expand-md py-3">
                 <div class="container"><a class="navbar-brand d-flex align-items-center" href="category_page.html"><span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon"><i class="fas fa-laptop-medical"></i></span><span>BioCat</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1"><span class="navbar-text">Hello, Rob!</span>
@@ -82,7 +82,7 @@
                 </form>
             </div>
         </div>
-        <footer class="text-center my-footer"><div class="container-fluid py-4">
+        <footer class="text-center" id="footer"><div class="container-fluid py-4">
     <p class="mb-0">Copyright © 2022 BioCat</p>
     <p class="mb-0">Temple University</p>
 </div></footer>
