modal pop-up fix

--- a/request_page_user.html
+++ b/request_page_user.html
@@ -61,7 +61,7 @@
                                 <td>1</td>
                                 <td>Eleni Annie</td>
                                 <td>11/01/22</td>
-                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#modal-1"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td><button class="btn btn-primary table-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill" style="background-color: var(--bs-btn-hover-bg);">In Progress</button></td>
                             </tr>
                             <tr>
