--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <form class="text-center" method="post">
                                 <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="TUAccess"></div>
                                 <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-                                <div class="mb-3"><button class="btn btn-primary d-block w-100 my-button" type="submit">Login</button></div>
+                                <div class="mb-3"><a class="btn btn-primary d-block w-100 my-button" type="submit" href="admin_page.html">Login</a></div>
                                 <p class="text-muted">Forgot your password?</p>
                             </form>
                         </div>
