added edit button

--- a/admin_page.html
+++ b/admin_page.html
@@ -97,6 +97,7 @@
                                         <th>Manufacturer</th>
                                         <th>M. Code</th>
                                         <th>Quantity&nbsp;</th>
+                                        <th>Edit</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -108,6 +109,7 @@
                                         <td>General Biological Supply House&nbsp;</td>
                                         <td>[Turtox] E 8.35</td>
                                         <td>29</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Earthworm anterior end near median sagittal section</td>
@@ -117,6 +119,7 @@
                                         <td>Triarch Inc</td>
                                         <td>ZH 1-141</td>
                                         <td>60</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Earthworm Is anterior end&nbsp;</td>
@@ -126,6 +129,7 @@
                                         <td>General Biological Supply House&nbsp;</td>
                                         <td>Turtox Z 8.45</td>
                                         <td>5</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Earthworm anterior end near median sagittal section<br><br></td>
@@ -135,6 +139,7 @@
                                         <td>Triarch Inc<br><br><br></td>
                                         <td>ZH 1-141<br><br></td>
                                         <td><br>60<br><br></td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Earthworm anterior end sagittal section&nbsp;</td>
@@ -144,6 +149,7 @@
                                         <td>Carolina Biological Supply Company&nbsp;</td>
                                         <td>Z 1265</td>
                                         <td>11</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Acorus calamus rhizome xs</td>
@@ -153,6 +159,7 @@
                                         <td>Triarch inc</td>
                                         <td>12-1</td>
                                         <td>18</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Acorus calamus root xs</td>
@@ -162,6 +169,7 @@
                                         <td>Triarch Inc</td>
                                         <td>14-1</td>
                                         <td>31</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Acorus / sweet flag rhizome cs&nbsp;</td>
@@ -171,6 +179,7 @@
                                         <td>Carolina Biological Supply Company&nbsp;</td>
                                         <td>B 559A / 30-3362</td>
                                         <td>10</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Allium cepa (onion) section of root-tip showing mitosis</td>
@@ -180,6 +189,7 @@
                                         <td>New York Scientific Supply Company</td>
                                         <td>N/A</td>
                                         <td>2</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Malaria in testes&nbsp;</td>
@@ -189,6 +199,7 @@
                                         <td>General Biological Supply House&nbsp;</td>
                                         <td>P 3</td>
                                         <td>16</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Oocysts mosquito stomach</td>
@@ -198,6 +209,7 @@
                                         <td>Army Medical School</td>
                                         <td>N/A</td>
                                         <td>1</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Amphiuma small intestine xs&nbsp;</td>
@@ -207,6 +219,7 @@
                                         <td>General Biological Supply House</td>
                                         <td>[Turtox] Z 14.31</td>
                                         <td>9</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Aspergillus conidiophores 1.5 um sec&nbsp;<br><br></td>
@@ -216,6 +229,7 @@
                                         <td>Carolina Biological Supply Company&nbsp;</td>
                                         <td>97-4420 / 29-7878</td>
                                         <td>20</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Sphenophyllum plurifoliatum Halifax hard coal lower Yorkian Yorks Yorkshire England&nbsp;</td>
@@ -225,6 +239,7 @@
                                         <td>Unknown</td>
                                         <td>N/A</td>
                                         <td>2</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                     <tr>
                                         <td>Bacteria cocci bacilli &amp; spirillae separate smears</td>
@@ -234,6 +249,7 @@
                                         <td>Triarch Inc</td>
                                         <td>4-102 sp</td>
                                         <td>11</td>
+                                        <td> <button class="btn" type="button"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                     </tr>
                                 </tbody>
                             </table>
