--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>BioCat-Updated</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Advent+Pro:100,200,300,400,500,600,700&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monda&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/card.compiled.css">
@@ -22,18 +23,24 @@
 </head>
 
 <body style="/*height: 100vh;*/">
-    <section class="position-relative py-4 py-xl-5" style="color: var(--bs-red);background: linear-gradient(black, var(--bs-red)), var(--bs-red);height: 89.2vh;">
+    <section class="position-relative py-4 py-xl-5"
+        style="color: var(--bs-red);background: linear-gradient(black, var(--bs-red)), var(--bs-red);height: 89.2vh;">
         <div class="container mt-5 pt-5">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 col-xl-4">
                     <div class="card mb-5">
                         <div class="card-body d-flex flex-column align-items-center pb-5">
                             <h2 class="mt-5" style="font-weight: 700;">Welcome to BioCat!</h2>
-                            <div class="bs-icon-xl bs-icon-circle bs-icon-primary bs-icon mt-4 mb-1"><i class="fas fa-cat"></i></div>
+                            <div class="bs-icon-xl bs-icon-circle bs-icon-primary bs-icon mt-4 mb-1"><i
+                                    class="fas fa-cat"></i></div>
                             <form class="text-center" method="post">
-                                <div class="mb-3"><input class="form-control" type="email" name="email" placeholder="TUAccess"></div>
-                                <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-                                <div class="mb-3"><a class="btn btn-primary d-block w-100 my-button" type="submit" href="admin_page.html">Login</a></div>
+                                <p class="text-dark">Login with TUEmail</p>
+                                <div class="mb-3"><input class="form-control" type="email" name="email"
+                                        placeholder="TUAccess"></div>
+                                <div class="mb-3"><input class="form-control" type="password" name="password"
+                                        placeholder="Password"></div>
+                                <div class="mb-3"><a class="btn btn-primary d-block w-100 my-button" type="submit"
+                                        href="admin_page.html">Login</a></div>
                                 <p class="text-muted">Forgot your password?</p>
                             </form>
                         </div>
@@ -42,10 +49,6 @@
             </div>
         </div>
     </section>
-    <footer class="text-center" style="background-color: var(--bs-gray-900);"><div class="container-fluid my-footer py-4" >
-    <p class="mb-0">Copyright © 2022 BioCat</p>
-    <p class="mb-0">Temple University</p>
-</div></footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
