--- a/annelida.html
+++ b/annelida.html
@@ -48,10 +48,9 @@
                         <h1 class="text-center page-title" style="padding: 20px 60px;">Annelida</h1>
                         <div class=" card-side mt-4">
                             <div class="card annedlida" id='' style="width: 215px;height: 215px;"><img
-                                    class="card-img-top w-100 d-block"
-                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213"
+                                    src="assets\images\Earthworm xs setae.webp" class="card-img-top w-100 d-block"
+                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 120px;" width="213"
                                     height="115">
-                                <img class="card-img-top" src"..."="" alt="">
                                 <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                                     <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross
                                         Section&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Qty:
@@ -60,7 +59,8 @@
                             </div>
                             <div class="card annedlida" style="width: 215px;height: 215px;" data-bs-toggle="modal"
                                 data-bs-target="#quantity"><img class="card-img-top w-100 d-block"
-                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213"
+                                    src="assets\images\Earthworm xs setae.webp"
+                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 120px;" width="213"
                                     height="115">
                                 <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                                     <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross
@@ -68,9 +68,9 @@
                                         11</p>
                                 </div>
                             </div>
-                            <div class="card annedlida" style="width: 215px;height: 215px;"><img
-                                    class="card-img-top w-100 d-block"
-                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213"
+                            <div class="card annedlida" id='' style="width: 215px;height: 215px;"><img
+                                    src="assets\images\Earthworm xs setae.webp" class="card-img-top w-100 d-block"
+                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 120px;" width="213"
                                     height="115">
                                 <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                                     <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross
@@ -78,10 +78,9 @@
                                         11</p>
                                 </div>
                             </div>
-                            <div class="card annedlida"
-                                style="width: 215px;height: 215px;margin-bottom: 0px;padding-top: 0px;margin-top: 0px;">
-                                <img class="card-img-top w-100 d-block"
-                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213"
+                            <div class="card annedlida" id='' style="width: 215px;height: 215px;"><img
+                                    src="assets\images\Earthworm xs setae.webp" class="card-img-top w-100 d-block"
+                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 120px;" width="213"
                                     height="115">
                                 <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                                     <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross
@@ -89,9 +88,9 @@
                                         11</p>
                                 </div>
                             </div>
-                            <div class="card annedlida" style="width: 215px;height: 215px;margin-top: 0px;"><img
-                                    class="card-img-top w-100 d-block"
-                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213"
+                            <div class="card annedlida" id='' style="width: 215px;height: 215px;"><img
+                                    src="assets\images\Earthworm xs setae.webp" class="card-img-top w-100 d-block"
+                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 120px;" width="213"
                                     height="115">
                                 <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                                     <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross
@@ -99,9 +98,9 @@
                                         11</p>
                                 </div>
                             </div>
-                            <div class="card annedlida" style="width: 215px;height: 215px;margin-top: 0px;"><img
-                                    class="card-img-top w-100 d-block"
-                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 115px;" width="213"
+                            <div class="card annedlida" id='' style="width: 215px;height: 215px;"><img
+                                    src="assets\images\Earthworm xs setae.webp" class="card-img-top w-100 d-block"
+                                    style="padding-bottom: 0px;border-bottom-color: 52d1ff;height: 120px;" width="213"
                                     height="115">
                                 <div class="card-body" style="margin-top: 2px;border-bottom-color: 52d1ff;">
                                     <p class="card-text">Earthworm xs setae&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Cross
@@ -184,7 +183,8 @@
                         <div class="modal-footer">
                             <div class="btn-group" role="group"
                                 style="margin: 20px;margin-right: 20px;margin-left: 575px;"><button
-                                    class="btn btn-primary close-button mx-2" style="background-color: var(--bs-gray-900);" type="button"
+                                    class="btn btn-primary close-button mx-2"
+                                    style="background-color: var(--bs-gray-900);" type="button"
                                     data-bs-dismiss="modal">Cancel</button><button class="btn btn-primary my-button"
                                     type="button" data-bs-dismiss="modal">Add</button></div>
                         </div>
