--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <link rel="stylesheet" href="assets/css/table.css">
     <link rel="stylesheet" href="assets/css/validation-tables.css">
 </head>
-
-<body style="/*height: 100vh;*/">
+<body style="height: 100vh;">
     <section class="position-relative py-4 py-xl-5"
-        style="color: var(--bs-red);background: linear-gradient(black, var(--bs-red)), var(--bs-red);height: 89.2vh;">
+        style="color: var(--bs-red);background: linear-gradient(black, var(--bs-red)), var(--bs-red);height: 100vh;">
         <div class="container mt-5 pt-5">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 col-xl-4">
